# M5CardputerZero-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h
.github/workflows/: build.yml
assets/: device_layout.json  emu_layout.json  skin_layout.json
scripts/: detect_layout.py  find_regions.py  prepare_skin.py
src/: device_skin.cpp  device_skin.h  emu_compat.h  emu_compat_win.h  hal_sim.h  keyboard_map.cpp  keyboard_map.h  main.cpp  main_web.cpp
src/compat/: pthread.h  win32_stubs.h
src/compat/sys/: queue.h  wait.h
web/: shell.html
web-playground/: index.html
web-playground/emulator/: index.html  index.js  index.wasm
